--- a/cacao.html
+++ b/cacao.html
@@ -45,19 +45,20 @@
           <img src="/images/cacao_moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
           <img src="/images/cacao_sitemap.jpg" alt="site map" onclick="setMainImage(this)" />
           <img src="/images/cacao_wireframes.jpg" alt="wireframes" onclick="setMainImage(this)" />
-            <img src="/images/cacao_persona.jpg" alt="wireframes" onclick="setMainImage(this)" />
+           <img src="/images/cacao_persona.jpg" alt="persona" onclick="setMainImage(this)" />
         </div>
       </div>
 
       <!-- Project Info -->
       <div class="project-info">
-        <h1>Cacao web Design </h1>
+        <h1>Cacao Web Design </h1>
         <p class="project-subtitle">User experience and interface</p>
         <p>
-        I developed designs to meet customer furniture needs through on-site visits and created new products for the company’s portfolio.<br>
-        Additionally, I managed web page proposals, prepared presentations for the sales team featuring 3D models of spaces, 
-        photographed products, created technical sheets, produced blueprints, and fulfi lled other design requirements for the 
-        commercial department.
+        My work on this project focused on the research and planning stages for the creation of the website. 
+        I used tools such as user personas, target audience definition, empathy maps, and an analysis of the current competitive market.<br>
+        Starting from the site map, I gained clarity on how the low-fidelity wireframes should be structured, allowing me to move 
+        forward to the final prototype phase. This project helped me refine my skills in prototyping (Figma) and usability testing 
+        prior to code development.
         </p>
         <h3>Skills & Tools Used</h3>
         <ul class="project-skills">
