--- a/product-design.html
+++ b/product-design.html
@@ -35,12 +35,12 @@
       <h2 class="section-title">Products</h2>
       <div class="projects-grid">
         <a href="/proyecformas.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/Proyecformas\ Mockup\ fichas\ tecnicas.jpg');"></div>
+          <div class="project-thumb" style="background-image: url('/images/Proyecformas_fichas_tecnicas.jpg');"></div>
           <h3>Proyecformas</h3>
         </a>
-        <a href="project2.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/Voronoi\ render\ 1.jpg');"></div>
-          <h3>Voronoi</h3>
+        <a href="/voronoi.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('/images/Voronoi\ render\ 1.jpg');"></div>
+          <h3>Voronoi - Furniture + 3D Printing</h3>
         </a>
         <a href="project3.html" class="project-card">
           <div class="project-thumb">Packaging Design</div>
