--- a/voronoi.html
+++ b/voronoi.html
@@ -31,11 +31,11 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" />
+          <img id="mainPreview" src="/images/Voronoi render 1.jpg" alt="furniture render" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" class="active" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi render 1.jpg" alt="furniture render" class="active" onclick="setMainImage(this)" />
           <img src="/images/Proyecformas_render1.jpg " alt="concept render" onclick="setMainImage(this)" />
           <img src="/images/proyecformas render 2.png" alt="render" onclick="setMainImage(this)" />
           <img src="/images/proyecformas render 3.png" alt="context render" onclick="setMainImage(this)" />
@@ -45,8 +45,8 @@
 
       <!-- Project Info -->
       <div class="project-info">
-        <h1>Proyecformas - Furniture Design </h1>
-        <p class="project-subtitle">Product development and communication</p>
+        <h1>Voronoi </h1>
+        <p class="project-subtitle">Product service system (PSS)</p>
         <p>
         I developed designs to meet customer furniture needs through on-site visits and created new products for the company’s portfolio.<br>
         Additionally, I managed web page proposals, prepared presentations for the sales team featuring 3D models of spaces, 
