--- a/hachi.html
+++ b/hachi.html
@@ -18,7 +18,7 @@
         <ul class="nav-links">
           <li><a href="/about.html">About Me</a></li>
           <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic-design.html"><b>Graphic Design</b></a></li>
+          <li><a href="/graphic design.html"><b>Graphic Design</b></a></li>
           <li><a href="/ux-ui.html">UX/UI</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
