Initial portfolio upload

--- a/product-design.html
+++ b/product-design.html
@@ -42,8 +42,8 @@
           <div class="project-thumb" style="background-image: url('/images/Voronoi\ render\ 1.jpg');"></div>
           <h3>Voronoi - Furniture + 3D Printing</h3>
         </a>
-        <a href="project3.html" class="project-card">
-          <div class="project-thumb">Packaging Design</div>
+        <a href="/newprint.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('/images/newprint\ render\ packaging-03.png');"></div>
           <h3>Packaging at Newprint</h3>
         </a>
       </div>
