--- a/voronoi.html
+++ b/voronoi.html
@@ -36,10 +36,13 @@
 
         <div class="thumbnail-gallery">
           <img src="/images/Voronoi render 1.jpg" alt="furniture render" class="active" onclick="setMainImage(this)" />
-          <img src="/images/Proyecformas_render1.jpg " alt="concept render" onclick="setMainImage(this)" />
-          <img src="/images/proyecformas render 2.png" alt="render" onclick="setMainImage(this)" />
-          <img src="/images/proyecformas render 3.png" alt="context render" onclick="setMainImage(this)" />
-          <img src="/images/Proyecformas_prototipo.jpg" alt="prototype" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi render 2.jpg" alt="prototype" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi render 3.jpg" alt="render" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi service system.jpg" alt="diagram of service" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi business model.jpg" alt="diagram of business model" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi user persona.jpg" alt="User persona" onclick="setMainImage(this)" />
+          <img src="/images/Voronoi value chain.jpg" alt="value chain" onclick="setMainImage(this)" />
         </div>
       </div>
 
@@ -48,20 +51,23 @@
         <h1>Voronoi </h1>
         <p class="project-subtitle">Product service system (PSS)</p>
         <p>
-        I developed designs to meet customer furniture needs through on-site visits and created new products for the company’s portfolio.<br>
-        Additionally, I managed web page proposals, prepared presentations for the sales team featuring 3D models of spaces, 
-        photographed products, created technical sheets, produced blueprints, and fulfi lled other design requirements for the 
-        commercial department.
+        This project aims to deliver high-quality furniture products enhanced by additive manufacturing. 
+        The goal was to offer both aesthetic value and functional services, such as product updates and the replacement 
+        of individual parts—ultimately extending the product’s lifecycle<br>
+        The design-driven research and planning process led to the development of a viable business model, 
+        including a system of key partners and resources. Leveraging available technologies, I created a furniture line
+        based on the Voronoi structure to standardize the visual identity and composition of the collection.
         </p>
         <h3>Skills & Tools Used</h3>
         <ul class="project-skills">
           <li>Illustrator</li>
           <li>Rhinoceros</li>
-          <li>Inventor</li>
+          <li>PSS</li>
           <li>Conceptualization</li> 
           <li>Indesign</li>
           <li>Keyshot</li>
           <li>Product Presentation</li>
+          <li>3D Printing</li>
         </ul>
       </div>
     </div>
