--- a/newprint.html
+++ b/newprint.html
@@ -51,28 +51,25 @@
         <h1>Packaging Design - Newprint</h1>
         <p class="project-subtitle">Structural design and prepress</p>
         <p>
-         as Structural Designer, I worked on a wide variety of projects, developing tailored packaging
+         As Structural Designer, I worked on a wide variety of projects, developing tailored packaging
          solutions for diverse industries such as food, beauty, and pharmaceuticals.<br>
          Creating custom packaging for each product required a high level of attention to detail and 
-         creativity to deliver functional, innovative, and production-feasible designs.<br>
+         creativity to deliver functional, innovative, and production-feasible designs.(Prototyping with Kongsberg XE-10)<br>
          My responsibilities ranged from detailed structural design to ordering the necessary tools 
          and materials, while maintaining constant communication with clients. Additionally, I contributed 
          directly to production processes, including printing plate production, assisting with digital 
          printing, and coordinating shipping.
-
-
-
         </p>
         <h3>Skills & Tools Used</h3>
         <ul class="project-skills">
+          <li>Artios CAD</li>
           <li>Illustrator</li>
-          <li>Rhinoceros</li>
-          <li>PSS</li>
-          <li>Conceptualization</li> 
-          <li>Indesign</li>
+          <li>PShotoshop</li>
+          <li>EPMS</li> 
+          <li>Shipstation</li>
           <li>Keyshot</li>
-          <li>Product Presentation</li>
-          <li>3D Printing</li>
+          <li>Kongsberg prototyping</li>
+          <li>Email communication</li>
         </ul>
       </div>
     </div>
