--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="Image.png" href="/Icon.png">
+  <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
   <script defer>
     // Toggle burger menu
@@ -42,11 +42,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="burger">
@@ -71,13 +71,13 @@
       <div class="carousel-wrapper">
         <button class="carousel-btn prev">‹</button>
         <div class="carousel-track">
-          <a href="/proyecformas.html" class="carousel-slide" style="background-image: url('/images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
+          <a href="proyecformas.html" class="carousel-slide" style="background-image: url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
             <div class="project-title"><h2>Proyecformas</h2></div>
           </a>
-          <a href="/cacao.html" class="carousel-slide" style="background-image: url('/images/cacao\ home\ mockup.png'); background-size: cover;">
+          <a href="cacao.html" class="carousel-slide" style="background-image: url('images/cacao\ home\ mockup.png'); background-size: cover;">
             <div class="project-title"><h2>Cacao</h2></div>
           </a>
-          <a href="/barvaro.html" class="carousel-slide" style="background-image: url('/images/barvaro_thumbnail.png'); background-size: cover;">
+          <a href="barvaro.html" class="carousel-slide" style="background-image: url('images/barvaro_thumbnail.png'); background-size: cover;">
             <div class="project-title"><h2>Barvaro</h2></div>
           </a>
         </div>
