linked files fixed

--- a/cacao.html
+++ b/cacao.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Title | My Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="/Icon.png" type="image/png" />
+  <link rel="icon" href="Icon.png" type="image/png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
 </head>
 <body class="project">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html"><b>UX/UI</b></a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html"><b>UX/UI</b></a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
        <div class="burger">
@@ -36,16 +36,16 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/cacao home mockup.png" alt="home mockup" />
+          <img id="mainPreview" src="images/cacao home mockup.png" alt="home mockup" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/cacao home mockup.png" alt="home mockup" class="active" onclick="setMainImage(this)" />
-          <img src="/images/cacao_color.jpg" alt="color" onclick="setMainImage(this)" />
-          <img src="/images/cacao_moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
-          <img src="/images/cacao_sitemap.jpg" alt="site map" onclick="setMainImage(this)" />
-          <img src="/images/cacao_wireframes.jpg" alt="wireframes" onclick="setMainImage(this)" />
-           <img src="/images/cacao_persona.jpg" alt="persona" onclick="setMainImage(this)" />
+          <img src="images/cacao home mockup.png" alt="home mockup" class="active" onclick="setMainImage(this)" />
+          <img src="images/cacao_color.jpg" alt="color" onclick="setMainImage(this)" />
+          <img src="images/cacao_moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
+          <img src="images/cacao_sitemap.jpg" alt="site map" onclick="setMainImage(this)" />
+          <img src="images/cacao_wireframes.jpg" alt="wireframes" onclick="setMainImage(this)" />
+          <img src="images/cacao_persona.jpg" alt="persona" onclick="setMainImage(this)" />
         </div>
       </div>
 
