--- a/hachi.html
+++ b/hachi.html
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html"><b>Graphic Design</b></a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html"><b>Graphic Design</b></a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,14 +31,14 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/hachi_mockup.jpg" alt="totebag mockup" />
+          <img id="mainPreview" src="images/hachi_mockup.jpg" alt="totebag mockup" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/hachi_mockup.jpg" alt="totebag mockup" class="active" onclick="setMainImage(this)" />
-          <img src="/images/hachi_tarjeta_presentacion.jpg" alt="bussines card" onclick="setMainImage(this)" />
-          <img src="/images/hachi_Mockup_Camiseta_Frontal.jpg" alt="Logo aplication" onclick="setMainImage(this)" />
-          <img src="/images/hachi _color_variant.jpg" alt="logo and colors" onclick="setMainImage(this)" />
+          <img src="images/hachi_mockup.jpg" alt="totebag mockup" class="active" onclick="setMainImage(this)" />
+          <img src="images/hachi_tarjeta_presentacion.jpg" alt="bussines card" onclick="setMainImage(this)" />
+          <img src="images/hachi_Mockup_Camiseta_Frontal.jpg" alt="Logo aplication" onclick="setMainImage(this)" />
+          <img src="images/hachi _color_variant.jpg" alt="logo and colors" onclick="setMainImage(this)" />
         </div>
       </div>
 
