--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="Image.png" href="/Icon.png">
+  <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
  </head>
 <body class="about">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html"><b>About Me</b></a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html"><b>About Me</b></a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,7 +31,7 @@
      <section id="about" class="about-section">
       <div class="about-container">
         <div class="about-image">
-          <img src="/images/profile picture.png" alt="Portrait of Juan Quintero">
+          <img src="images/profile picture.png" alt="Portrait of Juan Quintero">
         </div>
         <div class="about-text">
           <h2>About Me</h2>
@@ -51,16 +51,16 @@
     <div class="skill-card">
       <h2>Digital skills</h2>
       <div>
-        <img src="/images/skills_digital.png" alt="skills-chart">
+        <img src="images/skills_digital.png" alt="skills-chart">
       </div>
       <div>
       <h2>Soft skills</h2>
       <div class="soft-skills-card">
-        <img src="/images/Skills_soft.png" alt="skills-chart">
+        <img src="images/Skills_soft.png" alt="skills-chart">
       </div>
       <h2>languages</h2>
       <div class="soft-skills-card">
-        <img src="/images/Skills_Languages.png" alt="skills-chart">
+        <img src="images/Skills_Languages.png" alt="skills-chart">
       </div>
     </div>
     </section>
