--- a/barvaro.html
+++ b/barvaro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barvaro Project | My Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="/Icon.png" type="/image.png" />
+  <link rel="icon" href="Icon.png" type="image.png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
 </head>
 <body class="project">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html"><b>Graphic Design</b></a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html"><b>Graphic Design</b></a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -32,14 +32,14 @@
     <!-- Image Viewer -->
 <div class="project-images">
   <div class="main-image">
-    <img id="mainPreview" src="/images/barvaro_Coaster_Mockup.png" alt="Main Barvaro image">
+    <img id="mainPreview" src="images/barvaro_Coaster_Mockup.png" alt="Main Barvaro image">
   </div>
 
   <div class="thumbnail-gallery">
-    <img src="/images/barvaro_Coaster_Mockup.png" alt="logo mockup" class="active" onclick="setMainImage(this)">
-    <img src="/images/barvaro_fachada_mockup.png" alt="fachada" onclick="setMainImage(this)">
-    <img src="/images/barvaro_typography_aplication.png" alt="typhography" onclick="setMainImage(this)">
-    <img src="/images/baarvaro_logo Variants.png" alt="logo variants" onclick="setMainImage(this)">
+    <img src="images/barvaro_Coaster_Mockup.png" alt="logo mockup" class="active" onclick="setMainImage(this)">
+    <img src="images/barvaro_fachada_mockup.png" alt="fachada" onclick="setMainImage(this)">
+    <img src="images/barvaro_typography_aplication.png" alt="typhography" onclick="setMainImage(this)">
+    <img src="images/baarvaro_logo Variants.png" alt="logo variants" onclick="setMainImage(this)">
   </div>
 </div>
 
