--- a/cira.html
+++ b/cira.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Title | My Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="/Icon.png" type="image/png" />
+  <link rel="icon" href="Icon.png" type="image/png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
 </head>
 <body class="project">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html"><b>Graphic Design</b></a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html"><b>Graphic Design</b></a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,14 +31,14 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/Cira Fackbooks Mockup.png" alt="Factbook" />
+          <img id="mainPreview" src="images/Cira Fackbooks Mockup.png" alt="Factbook" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/Cira Fackbooks Mockup.png" alt="Factbook mockup" class="active" onclick="setMainImage(this)" />
-          <img src="/images/Cira Fackbooks general.png" alt="Factbook general" onclick="setMainImage(this)" />
-          <img src="/images/Cira Mockup.png" alt="report mockup" onclick="setMainImage(this)" />
-          <img src="/images/Cira powerpoint mockup.png" alt="powerpoint presentation" onclick="setMainImage(this)" />
+          <img src="images/Cira Fackbooks Mockup.png" alt="Factbook mockup" class="active" onclick="setMainImage(this)" />
+          <img src="images/Cira Fackbooks general.png" alt="Factbook general" onclick="setMainImage(this)" />
+          <img src="images/Cira Mockup.png" alt="report mockup" onclick="setMainImage(this)" />
+          <img src="images/Cira powerpoint mockup.png" alt="powerpoint presentation" onclick="setMainImage(this)" />
         </div>
       </div>
 
