--- a/graphic design.html
+++ b/graphic design.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Design | My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="Image.png" href="/Icon.png">
+  <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body class="graphic-design">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html"><b>Graphic Design</b></a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html"><b>Graphic Design</b></a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -35,16 +35,16 @@
     <section class="projects-section">
       <h2 class="section-title">Graphic Design</h2>
       <div class="projects-grid">
-        <a href="/barvaro.html" class="project-card">
-  <div class="project-thumb" style="background-image: url('/images/Menu\ Mockup.png');"></div>
+        <a href="barvaro.html" class="project-card">
+  <div class="project-thumb" style="background-image: url('images/Menu\ Mockup.png');"></div>
   <h3>Barvaro</h3>
 </a>
-       <a href="/cira.html" class="project-card">
-  <div class="project-thumb" style="background-image: url('/images/Cira\ Mockup.png');"></div>
+       <a href="cira.html" class="project-card">
+  <div class="project-thumb" style="background-image: url('images/Cira\ Mockup.png');"></div>
   <h3>CIRA</h3>
 </a>
-        <a href="/hachi.html" class="project-card">
-  <div class="project-thumb" style="background-image: url('/images/hachi_mockup.jpg');"></div>
+        <a href="hachi.html" class="project-card">
+  <div class="project-thumb" style="background-image: url('images/hachi_mockup.jpg');"></div>
   <h3>HACHI</h3>
 </a>
       </div>
