--- a/product-design.html
+++ b/product-design.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Design | My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="Image.png" href="/Icon.png">
+  <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body class="product-design">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html"><b>Product Design</b></a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html"><b>Product Design</b></a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="burger">
@@ -34,16 +34,16 @@
     <section class="projects-section">
       <h2 class="section-title">Products</h2>
       <div class="projects-grid">
-        <a href="/proyecformas.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/images/Proyecformas_fichas_tecnicas.jpg');"></div>
+        <a href="proyecformas.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('images/Proyecformas_fichas_tecnicas.jpg');"></div>
           <h3>Proyecformas</h3>
         </a>
-        <a href="/voronoi.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/images/Voronoi\ render\ 1.jpg');"></div>
+        <a href="voronoi.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('images/Voronoi\ render\ 1.jpg');"></div>
           <h3>Voronoi - Furniture + 3D Printing</h3>
         </a>
-        <a href="/newprint.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/images/newprint\ render\ packaging-03.png');"></div>
+        <a href="newprint.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('images/newprint\ render\ packaging-03.png');"></div>
           <h3>Packaging at Newprint</h3>
         </a>
       </div>
