--- a/proyecformas.html
+++ b/proyecformas.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Title | My Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="/Icon.png" type="image/png" />
+  <link rel="icon" href="Icon.png" type="image/png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
 </head>
 <body class="project">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html"><b>Product Design</b></a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html"><b>Product Design</b></a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,15 +31,15 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" />
+          <img id="mainPreview" src="images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" class="active" onclick="setMainImage(this)" />
-          <img src="/images/Proyecformas_render1.jpg " alt="concept render" onclick="setMainImage(this)" />
-          <img src="/images/proyecformas render 2.png" alt="render" onclick="setMainImage(this)" />
-          <img src="/images/proyecformas render 3.png" alt="context render" onclick="setMainImage(this)" />
-          <img src="/images/Proyecformas_prototipo.jpg" alt="prototype" onclick="setMainImage(this)" />
+          <img src="images/Proyecformas_fichas_tecnicas.jpg" alt="data sheets" class="active" onclick="setMainImage(this)" />
+          <img src="images/Proyecformas_render1.jpg " alt="concept render" onclick="setMainImage(this)" />
+          <img src="images/proyecformas render 2.png" alt="render" onclick="setMainImage(this)" />
+          <img src="images/proyecformas render 3.png" alt="context render" onclick="setMainImage(this)" />
+          <img src="images/Proyecformas_prototipo.jpg" alt="prototype" onclick="setMainImage(this)" />
         </div>
       </div>
 
