--- a/ux-ui.html
+++ b/ux-ui.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Design | My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="Image.png" href="/Icon.png">
+  <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body class="product-design">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html">Product Design</a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html"><b>UX/UI</b></a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html"><b>UX/UI</b></a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -35,8 +35,8 @@
     <section class="projects-section">
       <h2 class="section-title">UX/UI</h2>
       <div class="projects-grid">
-        <a href="/cacao.html" class="project-card">
-          <div class="project-thumb" style="background-image: url('/images/cacao\ home\ mockup.png');"></div>
+        <a href="cacao.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('images/cacao\ home\ mockup.png');"></div>
           <h3>CACAO</h3>
         </a>
         <a href="project2.html" class="project-card">
