--- a/voronoi.html
+++ b/voronoi.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Title | My Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="/Icon.png" type="image/png" />
+  <link rel="icon" href="Icon.png" type="image/png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
 </head>
 <body class="project">
@@ -16,11 +16,11 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about.html">About Me</a></li>
-          <li><a href="/product-design.html"><b>Product Design</b></a></li>
-          <li><a href="/graphic design.html">Graphic Design</a></li>
-          <li><a href="/ux-ui.html">UX/UI</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="product-design.html"><b>Product Design</b></a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="ux-ui.html">UX/UI</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,18 +31,18 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="/images/Voronoi render 1.jpg" alt="furniture render" />
+          <img id="mainPreview" src="images/Voronoi render 1.jpg" alt="furniture render" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="/images/Voronoi render 1.jpg" alt="furniture render" class="active" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi render 2.jpg" alt="prototype" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi render 3.jpg" alt="render" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi service system.jpg" alt="diagram of service" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi business model.jpg" alt="diagram of business model" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi user persona.jpg" alt="User persona" onclick="setMainImage(this)" />
-          <img src="/images/Voronoi value chain.jpg" alt="value chain" onclick="setMainImage(this)" />
+          <img src="images/Voronoi render 1.jpg" alt="furniture render" class="active" onclick="setMainImage(this)" />
+          <img src="images/Voronoi render 2.jpg" alt="prototype" onclick="setMainImage(this)" />
+          <img src="images/Voronoi render 3.jpg" alt="render" onclick="setMainImage(this)" />
+          <img src="images/Voronoi moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
+          <img src="images/Voronoi service system.jpg" alt="diagram of service" onclick="setMainImage(this)" />
+          <img src="images/Voronoi business model.jpg" alt="diagram of business model" onclick="setMainImage(this)" />
+          <img src="images/Voronoi user persona.jpg" alt="User persona" onclick="setMainImage(this)" />
+          <img src="images/Voronoi value chain.jpg" alt="value chain" onclick="setMainImage(this)" />
         </div>
       </div>
 
