--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="logo.png" alt="Logo" height="40">
+        <img src="Logo.png" alt="Logo" height="40">
       </a>
       <nav>
         <ul class="nav-links">
