--- a/about.html
+++ b/about.html
@@ -7,7 +7,18 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
- </head>
+  <script defer>
+    // Toggle burger menu
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector(".burger");
+      const nav = document.querySelector(".nav-links");
+
+      burger.addEventListener("click", () => {
+        nav.classList.toggle("nav-active");
+      });
+    });
+  </script>
+</head>
 <body class="about">
   <header>
     <div class="container">
@@ -23,6 +34,11 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="burger">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
     </div>
   </header>
 
