--- a/cira.html
+++ b/cira.html
@@ -7,12 +7,23 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="Icon.png" type="image/png" />
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+    <script defer>
+    // Toggle burger menu
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector(".burger");
+      const nav = document.querySelector(".nav-links");
+
+      burger.addEventListener("click", () => {
+        nav.classList.toggle("nav-active");
+      });
+    });
+  </script>
 </head>
 <body class="project">
   <header>
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="Logo.png" alt="Logo" height="40" />
+        <img src="logo.png" alt="Logo" height="40" />
       </a>
       <nav>
         <ul class="nav-links">
@@ -23,6 +34,11 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="burger">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
     </div>
   </header>
 
