--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,18 @@
   <title>Contact | Juan Quintero Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="Icon.png" type="image/png">
-  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">\
+  <script defer>
+    // Toggle burger menu
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector(".burger");
+      const nav = document.querySelector(".nav-links");
+
+      burger.addEventListener("click", () => {
+        nav.classList.toggle("nav-active");
+      });
+    });
+  </script>
 </head>
 <body class="contact">
   <header>
@@ -23,6 +34,11 @@
           <li><a href="contact.html"><b>Contact</b></a></li>
         </ul>
       </nav>
+      <div class="burger">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
     </div>
   </header>
 
