--- a/graphic design.html
+++ b/graphic design.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="Image.png" href="Icon.png">
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+   <script defer>
+    // Toggle burger menu
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector(".burger");
+      const nav = document.querySelector(".nav-links");
+
+      burger.addEventListener("click", () => {
+        nav.classList.toggle("nav-active");
+      });
+    });
+  </script>
 </head>
 <body class="graphic-design">
   <header>
@@ -22,12 +33,12 @@
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
       </nav>
+      <div class="burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
     </div>
   </header>
 
