--- a/cira.html
+++ b/cira.html
@@ -79,18 +79,18 @@
     </div>
   </main>
 
-  <footer>
-    <div class="footer-container">
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
+<footer>
+     <div class="footer-container">
+       <div class="social-icons">
+         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
       </div>
-      <p>Contact: juancquinteroma@gmail.com</p>
-      <p>&copy; 2025 Juan Quintero. All rights reserved.</p>
+      <h4>Contact: juancquinteroma@gmail.com</h4>
+      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
-
+  
   <script>
     function setMainImage(thumb) {
       const main = document.getElementById('mainPreview');
