--- a/graphic design.html
+++ b/graphic design.html
@@ -62,15 +62,15 @@
     </section>
   </main>
 
-  <footer>
+ <footer>
      <div class="footer-container">
        <div class="social-icons">
          <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
       </div>
-      <p>Contact: juancquinteroma@gmail.com</p>
-      <p>&copy; 2025 Juan Quintero. All rights reserved.</p>
+      <h4>Contact: juancquinteroma@gmail.com</h4>
+      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
 </body>
