--- a/ux-ui.html
+++ b/ux-ui.html
@@ -69,8 +69,8 @@
         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
       </div>
-      <p>Contact: juancquinteroma@gmail.com</p>
-      <p>&copy; 2025 Juan Quintero. All rights reserved.</p>
+      <h4>Contact: juancquinteroma@gmail.com</h4>
+      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
 </body>
