--- a/about.html
+++ b/about.html
@@ -75,10 +75,12 @@
         <img src="images/Skills_soft.png" alt="skills-chart">
       </div>
       <h2>languages</h2>
-      <div class="soft-skills-card">
-        <img src="images/Skills_Languages.png" alt="skills-chart">
-      </div>
-    </div>
+      <ul class="project-skills">
+        <li>English: Advance</li>
+        <li>Spanish: Native</li>
+        <li>French: Basic</li>
+      </ul>
+       </div>
     </section>
   </main>
 
