--- a/newprint.html
+++ b/newprint.html
@@ -53,8 +53,8 @@
         <div class="thumbnail-gallery">
           <img src="images/newprint render packaging-03.png" alt="Packaging render" class="active" onclick="setMainImage(this)" />
           <img src="images/newprint render 1-02.png" alt="render packaging" onclick="setMainImage(this)" />
-          <img src="images/newprint render 1-01.png" alt="render" onclick="setMainImage(this)" />
-          <img src="images/Voronoi moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
+          <img src="images/newprint render 1-01.png" alt="render syringe packaging" onclick="setMainImage(this)" />
+          <img src="images/newprint render packaging-4-04.png" alt="render compound" onclick="setMainImage(this)" />
           <img src="images/Voronoi service system.jpg" alt="diagram of service" onclick="setMainImage(this)" />
           <img src="images/Voronoi business model.jpg" alt="diagram of business model" onclick="setMainImage(this)" />
         </div>
