--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
       <nav>
         <ul class="nav-links">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="product-design.html">Product Design</a></li>
-          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="product-design.html">Industrial Design</a></li>
+          <li><a href="graphic-design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="burger">
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
   </header>
 
@@ -74,7 +74,7 @@
           <a href="proyecformas.html" class="carousel-slide" style="background-image: url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
             <div class="project-title"><h2>Proyecformas</h2></div>
           </a>
-          <a href="cacao.html" class="carousel-slide" style="background-image: url('images/cacao\ home\ mockup.png'); background-size: cover;">
+          <a href="cacao.html" class="carousel-slide" style="background-image: url('images/cacao home mockup.png'); background-size: cover;">
             <div class="project-title"><h2>Cacao</h2></div>
           </a>
           <a href="barvaro.html" class="carousel-slide" style="background-image: url('images/barvaro_thumbnail.png'); background-size: cover;">
@@ -83,21 +83,30 @@
         </div>
         <button class="carousel-btn next">›</button>
       </div>
-</section>
+    </section>
 
   </main>
 
   <footer>
     <div class="footer-container">
+      <button onclick="scrollToTop()" class="back-to-top">↑ Back to Top</button>
        <div class="social-icons">
-         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></i></a>
-        <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></i></a>
-        <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></i></a>
-      </div>
-      <h4>Contact: juancquinteroma@gmail.com</h4>
-      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
+         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
+         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
+       </div>
+       <div class="footer-links">
+         <a href="about.html">About Me</a>
+         <a href="product-design.html">Industrial Design</a>
+         <a href="graphic-design.html">Graphic Design</a>
+         <a href="ux-ui.html">UX/UI</a>
+         <a href="contact.html">Contact</a>
+       </div>
+       <h4>Contact: juancquinteroma@gmail.com</h4>
+       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
+  
   <script>
   const track = document.querySelector('.carousel-track');
   const prev = document.querySelector('.prev');
@@ -110,12 +119,16 @@
   prev.addEventListener('click', () => {
     track.scrollBy({ left: -300, behavior: 'smooth' });
   });
-</script>
-<script>
+
+  function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+  </script>
+  <script>
   window.addEventListener("scroll", () => {
     const header = document.querySelector("header");
     header.classList.toggle("scrolled", window.scrollY > 10);
   });
-</script>
+  </script>
 </body>
 </html>
