--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <nav>
         <ul class="nav-links">
           <li><a href="about.html"><b>About Me</b></a></li>
-          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="product-design.html">Industrial Design</a></li>
           <li><a href="graphic design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -71,28 +71,36 @@
       </div>
       <div>
       <h2>Soft skills</h2>
-      <div class="soft-skills-card">
+      <div class="skills-card">
         <img src="images/Skills_soft.png" alt="skills-chart">
       </div>
       <h2>languages</h2>
       <ul class="project-skills">
-        <li>English: Advance</li>
-        <li>Spanish: Native</li>
-        <li>French: Basic</li>
+        <li><h3>English: Advance</h3></li>
+        <li><h3>Spanish: Native</h3></li>
+        <li><h3>Spanish: Native</h3></li>
       </ul>
        </div>
     </section>
   </main>
 
-  <footer>
+ <footer>
     <div class="footer-container">
+      <button onclick="scrollToTop()" class="back-to-top">↑ Back to Top</button>
        <div class="social-icons">
-         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></i></a>
-        <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></i></a>
-        <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></i></a>
-      </div>
-      <h4>Contact: juancquinteroma@gmail.com</h4>
-      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
+         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
+         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
+       </div>
+       <div class="footer-links">
+         <a href="about.html">About Me</a>
+         <a href="product-design.html">Industrial Design</a>
+         <a href="graphic-design.html">Graphic Design</a>
+         <a href="ux-ui.html">UX/UI</a>
+         <a href="contact.html">Contact</a>
+       </div>
+       <h4>Contact: juancquinteroma@gmail.com</h4>
+       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
  </body>
