--- a/cacao.html
+++ b/cacao.html
@@ -28,7 +28,7 @@
       <nav>
         <ul class="nav-links">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="product-design.html">Product Design</a></li>
+          <li><a href="product-design.html">Industrial Design</a></li>
           <li><a href="graphic design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html"><b>UX/UI</b></a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -66,7 +66,7 @@
         <p class="project-subtitle">User experience and interface</p>
         <p>
         My work on this project focused on the research and planning stages for the creation of the website. 
-        I used tools such as user personas, target audience definition, empathy maps, and an analysis of the current competitive market.<br>
+        I used research and conceptual tools such as user persona, target audience definition, empathy maps, and an analysis of the current competitive market.<br>
         Starting from the site map, I gained clarity on how the low-fidelity wireframes should be structured, allowing me to move 
         forward to the final prototype phase. This project helped me refine my skills in prototyping (Figma) and usability testing 
         prior to code development.
@@ -83,16 +83,23 @@
       </div>
     </div>
   </main>
-
-   <footer>
+    <footer>
     <div class="footer-container">
+      <button onclick="scrollToTop()" class="back-to-top">↑ Back to Top</button>
        <div class="social-icons">
-         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></i></a>
-        <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></i></a>
-        <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></i></a>
-      </div>
-      <h4>Contact: juancquinteroma@gmail.com</h4>
-      <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+         <a href="https://www.linkedin.com/in/juan-quintero96/" target="_blank"><i class="lab la-linkedin-in"></i></a>
+         <a href="https://www.instagram.com/jcquinteroom_ph/" target="_blank"><i class="lab la-instagram"></i></a>
+         <a href="https://www.behance.net/juanCa96/" target="_blank"><i class="lab la-behance"></i></a>
+       </div>
+       <div class="footer-links">
+         <a href="about.html">About Me</a>
+         <a href="product-design.html">Industrial Design</a>
+         <a href="graphic design.html">Graphic Design</a>
+         <a href="ux-ui.html">UX/UI</a>
+         <a href="contact.html">Contact</a>
+       </div>
+       <h4>Contact: juancquinteroma@gmail.com</h4>
+       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
 
@@ -119,6 +126,12 @@
         lightbox.onclick = (e) => { if (e.target === lightbox) lightbox.remove(); };
       });
     });
+  </script>
+    <script>
+  window.addEventListener("scroll", () => {
+    const header = document.querySelector("header");
+    header.classList.toggle("scrolled", window.scrollY > 10);
+  });
   </script>
 </body>
 </html>
