--- a/about.html
+++ b/about.html
@@ -71,9 +71,20 @@
       </div>
       <div>
       <h2>Soft skills</h2>
-      <div class="skills-card">
-        <img src="images/Skills_soft.png" alt="skills-chart">
-      </div>
+    <ul>
+      <li class="soft-skill-card">
+        <img src="/images/empathy icon.png">
+        <h3>Empathy</h3></li>
+      </li>
+      <li class="soft-skill-card">
+        <img src="/images/adaptability icon.png">
+        <h3>Adaptability</h3></li>
+      </li>
+      <li class="soft-skill-card">
+        <img src="/images/teamwork icon.png">
+        <h3>Team Work</h3></li>
+      </li>
+    </ul>
       <h2>languages</h2>
       <ul class="project-skills">
         <li><h3>English: Advance</h3></li>
@@ -81,6 +92,7 @@
         <li><h3>Spanish: Native</h3></li>
       </ul>
        </div>
+       
     </section>
   </main>
 
