--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
       <ul class="project-skills">
         <li><h3>English: Advance</h3></li>
         <li><h3>Spanish: Native</h3></li>
-        <li><h3>Spanish: Native</h3></li>
+        <li><h3>French: Basic</h3></li>
       </ul>
        </div>
        
