--- a/ux-ui.html
+++ b/ux-ui.html
@@ -50,7 +50,7 @@
           <div class="project-thumb" style="background-image: url('images/cacao\ home\ mockup.png');"></div>
           <h3>CACAO</h3>
         </a>
-        <a href="project2.html" class="project-card">
+        <a href="mazda.html" class="project-card">
           <div class="project-thumb"></div>
           <h3>MAZDA CASATORO</h3>
         </a>
