--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <ul class="nav-links">
           <li><a href="about.html"><b>About Me</b></a></li>
           <li><a href="product-design.html">Industrial Design</a></li>
-          <li><a href="graphic design.html">Graphic Design</a></li>
+          <li><a href="graphic-design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -63,37 +63,42 @@
         </div>
       </div>
     </section>
+
     <section class="skills">
-    <div class="skill-card">
-      <h2>Digital skills</h2>
-      <div>
-        <img src="images/skills_digital.png" alt="skills-chart">
+      <div class="skills-block">
+        <h2>Digital skills</h2>
+        <div class="digital-skills">
+          <img src="images/skills_digital.png" alt="Digital skills chart" class="digital-skill-img">
+        </div>
       </div>
-      <div>
-      <h2>Soft skills</h2>
-    <ul class="soft-skill-list">
-      <li class="soft-skill-card">
-        <img src="/images/empathy icon.png">
-        <h3>Empathy</h3></li>
-      </li>
-      <li class="soft-skill-card">
-        <img src="/images/adaptability icon.png">
-        <h3>Adaptability</h3></li>
-      </li>
-      <li class="soft-skill-card">
-        <img src="/images/teamwork icon.png">
-        <h3>Team Work</h3></li>
-      </li>
-    </ul>
-      <h2>languages</h2>
-      <ul class="project-skills">
-        <li><h3>English: Advance</h3></li>
-        <li><h3>Spanish: Native</h3></li>
-        <li><h3>French: Basic</h3></li>
-      </ul>
-       </div>
-       
+
+      <div class="skills-block">
+        <h2>Soft skills</h2>
+        <div class="soft-skill-list">
+          <div class="soft-skill-card">
+            <img src="images/empathy icon.png" alt="Empathy">
+            <h3>Empathy</h3>
+          </div>
+          <div class="soft-skill-card">
+            <img src="images/adaptability icon.png" alt="Adaptability">
+            <h3>Adaptability</h3>
+          </div>
+          <div class="soft-skill-card">
+            <img src="images/teamwork icon.png" alt="Teamwork">
+            <h3>Team Work</h3>
+          </div>
+        </div>
+      </div>
+      <div class="skills-block">
+        <h2>Languages</h2>
+        <ul class="project-skills">
+          <li><h3>English: Advanced</h3></li>
+          <li><h3>Spanish: Native</h3></li>
+          <li><h3>French: Basic</h3></li>
+        </ul>
+      </div>
     </section>
+
   </main>
 
  <footer>
